// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el Gifapp debe de mostrar dos elementos 1`] = `
<Fragment>
  <h2>
    Giphy API App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en el Gifapp debe hacer match con el snapshot 1`] = `
<Fragment>
  <h2>
    Giphy API App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
